<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.wat.wel.bookmaster.MainActivity">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/first_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_text"
        android:background="@drawable/icon_first" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/first_icon"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/first_icon"
        android:text="@string/welcome_text_first" />

    <ImageView
        android:id="@+id/secon_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_icon"
        android:background="@drawable/icon_second" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/secon_icon"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/secon_icon"
        android:text="@string/welcome_text_second" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secon_icon"
        android:hint="@string/input_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_name"
        android:layout_centerHorizontal="true"
        android:onClick="onOkClick"
        android:text="@string/ok" />

</RelativeLayout>
